[project]
name = "stable-diffusion-webui-docker"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"

# https://github.com/AUTOMATIC1111/stable-diffusion-webui/blob/82a973c04367123ae98bd9abdf80d9eda9b910e2/requirements.txt
dependencies = [
  "GitPython",
  "Pillow",
  "accelerate",
  "blendmodes",
  "clean-fid",
  "diskcache",
  "einops",
  "facexlib",
  "fastapi>=0.90.1",
  "gradio==3.41.2",
  "inflection",
  "jsonmerge",
  "kornia",
  "lark",
  "numpy",
  "omegaconf",
  "open-clip-torch==2.24.0",
  "piexif",
  "protobuf==3.20.0",
  "psutil",
  "pytorch_lightning<2",
  "requests",
  "resize-right",
  "safetensors",
  "scikit-image>=0.19",
  "tomesd",
  "torch==2.1.2+cu118",
  "torchvision==0.16.2+cu118",
  "torchdiffeq",
  "torchsde",
  "transformers>=4.30,<4.31",
  "pillow-avif-plugin>=1.4,<1.5",
  "onnxruntime-gpu",
  "xformers==0.0.23.post1",
  "clip",
  "pydantic<2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
xformers = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
