[project]
name = "stable-diffusion-webui-docker"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"

# https://github.com/AUTOMATIC1111/stable-diffusion-webui/blob/82a973c04367123ae98bd9abdf80d9eda9b910e2/requirements_versions.txt
dependencies = [
  "GitPython==3.1.32",
  "Pillow==9.5.0",
  "accelerate==0.21.0",
  "blendmodes==2022",
  "clean-fid==0.1.35",
  "diskcache==5.6.3",
  "einops==0.4.1",
  "facexlib==0.3.0",
  "fastapi==0.94.0",
  "gradio==3.41.2",
  "httpcore==0.15",
  "inflection==0.5.1",
  "jsonmerge==1.8.0",
  "kornia==0.6.7",
  "lark==1.1.2",
  "numpy==1.26.2",
  "omegaconf==2.2.3",
  "open-clip-torch==2.20.0",
  "piexif==1.1.3",
  "protobuf==3.20.0",
  "psutil==5.9.5",
  "pytorch_lightning==1.9.4",
  "resize-right==0.0.2",
  "safetensors==0.4.2",
  "scikit-image==0.21.0",
  "spandrel==0.3.4",
  "spandrel-extra-arches==0.1.1",
  "tomesd==0.1.3",
  "torch==2.1.2+cu118",
  "torchvision==0.16.2+cu118",
  "torchdiffeq==0.2.3",
  "torchsde==0.2.6",
  "transformers==4.50.0",
  "httpx==0.24.1",
  "pillow-avif-plugin==1.4.3",
  "onnxruntime-gpu==1.16.0",
  "xformers==0.0.23.post1",
  "clip",
  # https://github.com/Mikubill/sd-webui-controlnet/blob/56cec5b2958edf3b1807b7e7b2b1b5186dbd2f81/requirements.txt
  "fvcore",
  "mediapipe",
  "opencv-python>=4.8.0",
  "svglib",
  "addict",
  "yapf",
  "albumentations==1.4.3",
  "matplotlib",
  "timm<=0.9.5",
  "pydantic<=1.10.17",
  "controlnet_aux>=0.0.9",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
xformers = { index = "pytorch-cu118" }
clip = { git = "https://github.com/openai/CLIP", rev = "d50d76daa670286dd6cacf3bcd80b5e4823fc8e1" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
