[project]
name = "stable-diffusion-webui-docker"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10,<3.11"

# https://github.com/AUTOMATIC1111/stable-diffusion-webui/blob/82a973c04367123ae98bd9abdf80d9eda9b910e2/requirements_versions.txt
dependencies = [
  "GitPython==3.1.32",
  "Pillow==9.5.0",
  "accelerate==0.21.0",
  "blendmodes==2022",
  "clean-fid==0.1.35",
  "diskcache==5.6.3",
  "einops==0.4.1",
  "facexlib==0.3.0",
  "fastapi==0.94.0",
  "gradio==3.41.2",
  "httpcore==0.15",
  "inflection==0.5.1",
  "jsonmerge==1.8.0",
  "kornia==0.6.7",
  "lark==1.1.2",
  "numpy==1.26.2",
  "omegaconf==2.2.3",
  "open-clip-torch==2.20.0",
  "piexif==1.1.3",
  "protobuf==6.33.5",
  "psutil==5.9.5",
  "pytorch_lightning==1.9.4",
  "resize-right==0.0.2",
  "safetensors==0.4.5",
  "scikit-image==0.21.0",
  "spandrel==0.3.4",
  "spandrel-extra-arches==0.1.1",
  "tomesd==0.1.3",
  "torch==2.7.0+cu128",
  "torchvision==0.22.0+cu128",
  "torchdiffeq==0.2.3",
  "torchsde==0.2.6",
  "transformers==4.30.2",
  "httpx==0.24.1",
  "pillow-avif-plugin==1.4.3",
  "onnxruntime-gpu==1.16.0",
  "clip",
  # https://github.com/Mikubill/sd-webui-controlnet/blob/56cec5b2958edf3b1807b7e7b2b1b5186dbd2f81/requirements.txt
  "fvcore",
  "mediapipe==0.10.11",  # mediapipe 0.10.32 and controlnet_aux 0.0.10 raises AttributeError: module 'mediapipe' has no attribute 'solutions'
  "opencv-python>=4.8.0",
  "svglib<1.6",  # svglib 1.6 requires pycairo. pycairo requires gcc to install. We won't install gcc on runtime.
  "addict",
  "yapf",
  "albumentations==1.4.3",
  "matplotlib",
  "timm<=0.9.5",
  "pydantic<=1.10.17",
  "controlnet_aux==0.0.10",  # Lock due to mediapipe compatibility issue
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
clip = { git = "https://github.com/openai/CLIP", rev = "d50d76daa670286dd6cacf3bcd80b5e4823fc8e1" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
